...
        label.text = "Hello, world!"
        label.textColor = .white
        label.font = UIFont.systemFont(ofSize: 13)
        return label
    }()
    
    private lazy var exitButton: UIButton = {
        let button = UIButton.systemButton(
            with: UIImage(named: "Exit")!,
            target: self,
            action: #selector(Self.didTapExitButton)
        )
        button.accessibilityIdentifier = "exitButton"
...
    
    private func showLogoutMessage() {
        AlertPresenter.showAlert(
            vc: self,
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            firstButtonText: "Да", { [weak self] in
                guard let self = self else { return }
                self.presenter?.profileLogout()
            },
            secondButtonText: "Нет"
        )
    }
...
